syntax = "proto3";

package proto_render;

message Point {
    double x = 1;
    double y = 2;
}

message Color {
    enum TYPE{
        NONE = 0;
        STRING = 1;
        RGB = 2;
        RGBA = 3;
    }
    TYPE type = 1;
    uint32 red = 2;
    uint32 green = 3;
    uint32 blue = 4;
    double opacity = 5;
    string name = 6;
}

message RendererSettings {
    double width = 1;
    double height = 2;
    double padding = 3;
    double line_width = 4;
    double stop_radius = 5;
    int32 bus_label_font_size = 6;
    Point bus_label_offset = 7;
    Point stop_label_offset = 8;
    int32 stop_label_font_size = 9;
    Color underlayer_color = 10;
    double underlayer_width = 11;
    repeated Color color_palette = 12;
}